test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-nonnil-shared.good
init-field-dflt-nonnil-owned-from-nonnil-shared.chpl:8: error: cannot initialize field MyRecord.lhs of type 'owned MyClass' from a 'shared MyClass'
